Bug 104733 - LibreOffice won’t recognize OTF fonts on Windows
Summary: LibreOffice won’t recognize OTF fonts on Windows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords:
Depends on:
Blocks: Font-Formats
  Show dependency treegraph
 
Reported: 2016-12-17 13:47 UTC by Volga
Modified: 2017-11-04 10:43 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volga 2016-12-17 13:47:19 UTC
Description:
Recent build of LibreOfficeDev recognize OTF fonts after I download 
& install it on Windows.

Steps to Reproduce:
1. Download from http://dev-builds.libreoffice.org/daily/libreoffice-5-3/Win-x86@62-merge-TDF/2016-12-16_12.19.09/
2. Open attachment 128802 [details] 

Actual Results:  
Source Han Sans is missing in either document and font list.

Expected Results:
-


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 5.3.0.0.beta2+
Build ID: f4b7650ecd46e5404b35dccfb8b7d3b0a385d633
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; Layout Engine: new; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-3, Time: 2016-12-16_12:19:09
Locale: zh-CN (zh_CN); Calc: group


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 1 Volga 2016-12-17 14:13:09 UTC
I have also tested many other OTFs from https://code.google.com/archive/p/kingfont/downloads , none of them were recognized.
Comment 2 V Stuart Foote 2016-12-17 16:26:35 UTC
Can not reproduce.

On Windows 10 Pro 64-bit en-US with
Version: 5.3.0.0.beta2 (x64)
Build ID: a7e30712ad6d8bc9286007b37aa581983e0caba3
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; Layout Engine: new; 
Locale: en-US (en_US); Calc: CL

with Source Sans Han SC (ver 1.004, SourceHanSansSC-Regular.otf) installed to system it shows in font drop lists as "Source Han Sans SC Regular". It also shows as that in the Special Character dialog.
Comment 3 Julien Nabet 2016-12-17 16:34:35 UTC
Volga: for the test could you follow advice from https://wiki.documentfoundation.org/QA/FirstSteps and give us feedback?
Comment 4 Volga 2016-12-19 08:37:28 UTC
After I get 5.3.0 beta2 from download LibreOffice Fresh page at official website, the problem disappeared to me.
Comment 5 Julien Nabet 2016-12-19 09:20:38 UTC
Thank you for your feedback, let's put WFM then.
Comment 6 Volga 2016-12-20 07:31:08 UTC
Unfortunately, this problem appearing in LODev 5.4.0 alpha1 on Windows.

Version: 5.4.0.0.alpha0+
Build ID: 2e9c02feca732f6dd012ccbe5d7c6853c64075a5
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-12-20_00:19:54
Locale: zh-CN (zh_CN); Calc: group
Comment 7 Julien Nabet 2016-12-20 17:30:52 UTC
So let's reopen this one.
Comment 8 V Stuart Foote 2016-12-20 18:42:10 UTC
Confirming.

With Source Han Sans SC Regular (SourceHanSansSC-Regular.otf v1.004, 2015-06-14) installed to Windows 8.1

The font appears on font list for 5.3.0b2

Version: 5.3.0.0.beta2 (x64)
Build ID: a7e30712ad6d8bc9286007b37aa581983e0caba3
CPU Threads: 8; OS Version: Windows 6.29; UI Render: default; Layout Engine: new; 
Locale: en-US (en_US); Calc: CL

but on same system with 

Version: 5.4.0.0.alpha0+
Build ID: 2e9c02feca732f6dd012ccbe5d7c6853c64075a5
CPU Threads: 8; OS Version: Windows 6.29; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-12-20_00:19:54
Locale: en-US (en_US); Calc: CL

the font does not appear on font drop box lists, formatting toolbar or the Special Character dialog.

No change with default or OpenGL rendering selection.
Comment 10 Adolfo Jayme Barrientos 2016-12-21 06:52:41 UTC Comment hidden (dupe, obsolete, spam)
Comment 11 Commit Notification 2016-12-21 07:07:40 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72002992a3c5213882fa4d60c7cd8fab10f0b009

tdf#104733: Don't ignore OpenType-CFF fons on Windows

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2016-12-21 09:03:01 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=064773ecc3bfba37c80c2f9c6fccde35395a57c0&h=libreoffice-5-3

tdf#104733: Don't ignore OpenType-CFF fons on Windows

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.