tdf#104733: Don't ignore OpenType-CFF fons on Windows

This is a folloup for ef4b9032de55e6b1b182e4ead1bbe6e590df296e, turns
out TRUTYPE_FONTTYPE does not cover CFF fonts like I thought (the
fonts that I was checking were actually TTF fonts).

Reviewed-on: https://gerrit.libreoffice.org/32258
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Khaled Hosny <khaledhosny@eglug.org>
(cherry picked from commit 72002992a3c5213882fa4d60c7cd8fab10f0b009)

Change-Id: I2d7b34b625aa03134421dc44a24e3c66be25df98